--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -97,14 +97,23 @@ section:hover .heading {
   display: inline-block;
   text-decoration: wavy;
   color: var(--black);
-  text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9,
-    0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1),
-    0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2),
-    0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2),
+  text-shadow:
+    0 1px 0 #ccc,
+    0 2px 0 #c9c9c9,
+    0 3px 0 #bbb,
+    0 4px 0 #b9b9b9,
+    0 5px 0 #aaa,
+    0 6px 1px rgba(0, 0, 0, 0.1),
+    0 0 5px rgba(0, 0, 0, 0.1),
+    0 1px 3px rgba(0, 0, 0, 0.3),
+    0 3px 5px rgba(0, 0, 0, 0.2),
+    0 5px 10px rgba(0, 0, 0, 0.25),
+    0 10px 10px rgba(0, 0, 0, 0.2),
     0 20px 20px rgba(0, 0, 0, 0.15);
 }
 
-.heading:hover {}
+.heading:hover {
+}
 
 .heading::after {
   content: "";
@@ -140,7 +149,8 @@ section:hover .heading::after {
   font-weight: 400;
 }
 
-.studentData {}
+.studentData {
+}
 
 .gridStudents {
   display: grid;
@@ -148,7 +158,7 @@ section:hover .heading::after {
   grid-template-rows: auto;
 }
 
-.gridStudents>div {
+.gridStudents > div {
   background: #f2f2f2;
   text-align: center;
   border-radius: 10px;
@@ -190,7 +200,27 @@ p {
   background-color: var(--green);
   color: white !important;
 }
+.short {
+  border-color: #777 !important;
+  color: #777 !important;
+}
 
+.short::after {
+  background: white !important;
+}
+.conbtn {
+  border-color: var(--red) !important;
+  color: var(--red) !important;
+}
+
+.conbtn::after {
+  background: white !important;
+}
+
+.conbtn:hover {
+  background: var(--red);
+  color: white !important;
+}
 .bluetransparetbtn {
   border-color: var(--blue) !important;
   color: var(--blue) !important;
@@ -309,14 +339,13 @@ p {
   display: block;
 }
 
-
-
 .whyimg img {
   width: 100%;
   height: auto;
   display: block;
-  transition: transform 0.5s ease, filter 0.5s ease;
-
+  transition:
+    transform 0.5s ease,
+    filter 0.5s ease;
 }
 
 .whyimg:hover img {
@@ -424,7 +453,9 @@ select {
 }
 
 .courseCard:hover {
-  box-shadow: 20px 20px 60px #d9d9d9, -20px -20px 60px #ffffff;
+  box-shadow:
+    20px 20px 60px #d9d9d9,
+    -20px -20px 60px #ffffff;
   cursor: pointer;
 }
 
@@ -459,7 +490,9 @@ select {
   padding: 10px;
   margin: 5px 0;
   border-radius: 5px;
-  box-shadow: inset 0 0 10px #f9f9fb, 0 0 10px #dfdfdf;
+  box-shadow:
+    inset 0 0 10px #f9f9fb,
+    0 0 10px #dfdfdf;
 }
 
 .partners:hover {
@@ -588,13 +621,13 @@ footer {
   position: absolute;
 }
 
-.abouttxt>ul {
+.abouttxt > ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-.abouttxt ul>li:hover a {
+.abouttxt ul > li:hover a {
   color: var(--green);
 }
 
@@ -685,7 +718,6 @@ label {
 }
 
 .contactboxes {
-
   background-size: contain;
 }
 
@@ -767,16 +799,16 @@ address {
   justify-content: space-evenly;
 }
 
-.mediaBox>div {
+.mediaBox > div {
   margin: 10px 0;
   text-transform: capitalize;
 }
 
-.mediaBox>div:hover p {
+.mediaBox > div:hover p {
   color: rgb(255, 255, 255);
 }
 
-.mediaBox>div:hover a>img {
+.mediaBox > div:hover a > img {
   transform: rotateY(360deg);
 }
 
@@ -836,7 +868,8 @@ address {
   left: -20px;
 }
 
-.contactform {}
+.contactform {
+}
 
 .card-text {
   color: white;
@@ -1038,20 +1071,20 @@ address {
   list-style-type: none;
 }
 
-.agenttxt ul>li {
+.agenttxt ul > li {
   position: relative;
   font-size: 14px;
   margin: 10px 0;
 }
 
-.agenttxt ul>li::before {
+.agenttxt ul > li::before {
   content: "";
   inset: 0;
   left: -10px;
   position: absolute;
 }
 
-.agenttxt ul>li>p {
+.agenttxt ul > li > p {
   color: black;
 
   font-size: 14px;
@@ -1108,11 +1141,11 @@ address {
   font-size: 26px;
 }
 
-.addon_info>ul {
+.addon_info > ul {
   list-style: none;
 }
 
-.addon_info>ul>li {
+.addon_info > ul > li {
   padding: 15px 5px;
   border-bottom: 1px solid #dfdfdf;
   background: #8eb6ff7a;
@@ -1184,7 +1217,7 @@ address {
   padding: 10px 0;
 }
 
-.coursebox ul li>ul li:nth-child(odd) {
+.coursebox ul li > ul li:nth-child(odd) {
   /* can be add style for the UI on course page */
 }
 
@@ -1193,7 +1226,7 @@ address {
   color: var(--red);
 }
 
-.coursebox>table>tbody>tr>td {
+.coursebox > table > tbody > tr > td {
   vertical-align: middle;
 }
 
@@ -1317,14 +1350,16 @@ address {
 
 *::-webkit-scrollbar-thumb {
   background-color: var(--black);
-  background-image: -webkit-linear-gradient(45deg,
-      rgba(255, 255, 255, 0.2) 25%,
-      transparent 25%,
-      transparent 50%,
-      rgba(255, 255, 255, 0.2) 50%,
-      rgba(255, 255, 255, 0.2) 75%,
-      transparent 75%,
-      transparent);
+  background-image: -webkit-linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.2) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(255, 255, 255, 0.2) 50%,
+    rgba(255, 255, 255, 0.2) 75%,
+    transparent 75%,
+    transparent
+  );
 }
 
 .linkBox {
@@ -1349,12 +1384,12 @@ address {
   background: #ffffff;
 }
 
-.linkBox:hover .linkBody>a>img {
+.linkBox:hover .linkBody > a > img {
   filter: unset;
   transform: scale(1.4);
 }
 
-.linkBody>a>img {
+.linkBody > a > img {
   /* height:100px; */
 
   filter: grayscale();
@@ -1412,7 +1447,9 @@ address {
   margin: 0 auto;
   overflow: hidden;
   border-radius: 50%;
-  box-shadow: 0.5rem 0.5rem var(--yellow), -0.5rem -0.5rem var(--green);
+  box-shadow:
+    0.5rem 0.5rem var(--yellow),
+    -0.5rem -0.5rem var(--green);
 }
 
 .testi:hover {
@@ -1451,7 +1488,7 @@ address {
   color: #333;
 }
 
-.answer>ol>li {
+.answer > ol > li {
   margin: 10px 0;
 }
 
@@ -1520,13 +1557,13 @@ address {
   font-weight: 600;
 }
 
-.form-check>label {
+.form-check > label {
   font-size: 14px;
 
   margin: 5px 0;
 }
 
-.form-check>label:hover {
+.form-check > label:hover {
   color: black;
   font-weight: 600;
   cursor: pointer;
@@ -1578,7 +1615,7 @@ address {
     /* text-transform: capitalize; */
   }
 
-  .abouttxt ul>li {
+  .abouttxt ul > li {
     padding: 10px 0;
   }
 
@@ -1594,7 +1631,7 @@ address {
     grid-template-columns: 30% 30% 30%;
   }
 
-  .gridStudents>div {
+  .gridStudents > div {
     padding: 5px;
   }
 
@@ -1637,10 +1674,11 @@ address {
   }
 }
 
-@media (min-width: 420px) {}
+@media (min-width: 420px) {
+}
 
 @media (min-width: 768px) {
-  .gridStudents>div {
+  .gridStudents > div {
     padding: 20px;
   }
 
@@ -1663,7 +1701,7 @@ address {
     /* text-transform: capitalize; */
   }
 
-  .abouttxt ul>li {
+  .abouttxt ul > li {
     padding: 20px 0;
   }
 
